# REST2SQL-plugin

./: CMakeLists.txt  Contributions.md  README.md  exposing-resources.md
code/: handle_delete_request.c  handle_get_request.c  json-api.c
doc/: 01-TODO.md  04-stack-n-architecture-decisions.md  05-create-api-user.md  06-digest-authentication.md  07-session-jwt.md  08-resource-exposition.md  09-input-sanitization.md  10-handling_get_request.md  TODO.md  compilation.md  create-api-user.md  digest-authentication.md  handle_get_request.md  resource-subscription.md  session-jwt.md  subscription.md
docker/rockylinux/: Dockerfile
include/: common.h  handle_delete_request.h  handle_get_request.h
resources/: data.md  digest-authent.md  login.md  ping.md  procedures.md  status.md  structure.md
